app/assets/stylesheets/navigation.css
@media screen and (max-width: 500px) {
	/* navbars */
	#primary-nav, #primary-footer {display:none;}
	#m-primary-nav .menu{
		z-index:1000000;
		font-weight:bold;
		font-size:0.8em;
		width:100%;
		background:lightgrey;
		position:absolute;
		text-align:center;
	}
	#m-primary-nav .hamburger, #m-primary-nav .cross {
		width:14vw;
		height:14vw;
		font-size:9vw;
		-webkit-appearance: none;
  		-webkit-border-radius: 1vw;
	}
	#m-primary-nav .menu ul {
		margin: 0;
	 	padding: 0;
	  	list-style-type: none;
	 	list-style-image: none;
	}
	#m-primary-nav .menu li {
		display: block;
		border-bottom:#fff 1px solid;
	}
	#m-primary-nav .menu ul li a { 
		text-decoration:none;
	  	margin: 0;
	  	padding: 0.5em 0 0.5em 0;
	 	color:#2F4F4F;
	 	display:block;
	 	font-size:2em;
	}
}

@media screen and (min-width: 500px) {
	/* navbars */
	#m-primary-nav,#m-primary-footer {display:none;}


	.active {color:turquoise !important;}

	#primary-footer {
		clear:both;
		width:100%;
	}
	#primary-footer p {margin: 0 auto !important;}


}

